manifests/username.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ytokenov
