manifests/app-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: application
  labels:
    app: application
spec:
  replicas: 1
  selector:
    matchLabels:
      app: application
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: application
    spec:
      containers:
      - name: application
        image: gyeradot/ytokenov_application
        ports:
        - containerPort: 5000
        livenessProbe:
          httpGet:
            path: /healthz
            port: 5000
          timeoutSeconds: 10
          periodSeconds: 20
          initialDelaySeconds: 30
        readinessProbe:
          httpGet:
            path: /healthx
            port: 5000
          timeoutSeconds: 10
          periodSeconds: 20
          initialDelaySeconds: 30
        resources:
          requests:
            memory: "64Mi"
            cpu: "0.2"
          limits:
            memory: "128Mi"
            cpu: "0.5"
---

apiVersion: v1
kind: Service
metadata:
  name: application
spec:
  selector:
    app: application
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5000


---

apiVersion: v1
kind: Service
metadata:
  name: mongo
  labels:
    app: mongo
spec:
  clusterIP: None
  selector:
    app: mongo


---

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongo
  labels:
    app: mongo
spec:
  selector:
    matchLabels:
      app: mongo
  replicas: 1
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
      - name: mongo
        image: mongo
        resources:
          limits:
            cpu: 0.5
            memory: 256Mi
          requests:
            cpu: 0.2
            memory: 128Mi
        ports:
        - containerPort: 27017
